# switchblade

./: CLAUDE.md  Cargo.toml  DESIGN.md  PERF.md  PERFORMANCE-TASKS.md  PLAN.md  README.md  TASKS.md  switchblade.toml
benchmarks/: .gitignore  HARNESS.md  TASKS.md
benchmarks/design/: phase-0-contracts.md
benchmarks/fixtures/: .gitignore  generate.sh
benchmarks/reports/: chapter_sheet_latency.md  sweep_vs_playback-cap-validation.md
benchmarks/reports/05-zoom-storm/: extract.py
benchmarks/reports/05-zoom-storm/control1/: summary.json
benchmarks/reports/05-zoom-storm/control2/: summary.json
benchmarks/reports/05-zoom-storm/instant1/: summary.json
benchmarks/reports/05-zoom-storm/maxzoom1/: summary.json
benchmarks/reports/05-zoom-storm/maxzoom2/: summary.json
benchmarks/reports/05-zoom-storm/maxzoom_realatlas/: summary.json
benchmarks/reports/05-zoom-storm/storm1/: summary.json
benchmarks/reports/slow-disk-scheduler/runB/: summary.json
benchmarks/reports/slow-disk-scheduler/runC/: summary.json
benchmarks/reports/slow-disk-scheduler/runD/: summary.json
benchmarks/reports/slow-disk-scheduler/runF/: summary.json
benchmarks/reports/slow-disk-scheduler/runG/: summary.json
benchmarks/reports/slow-disk-scheduler/runH/: summary.json
benchmarks/scenarios/: chapter_sheet_fullview.toml  cold_open_quickview.toml  gen_corpus.sh  hover_last_tile.toml  hover_then_select_handoff.toml  pinch_ribbon.toml  slow_disk_big_library.toml  slow_disk_browse_sweep.toml  slow_disk_cold_sweep.toml  slow_disk_gesture_under_sweep.toml  slow_disk_watch_under_sweep.toml  sweep_vs_playback.toml  zoom_out_capacity.toml  zoom_out_max.toml  zoom_storm_instant_open.toml  zoomed_in_control.toml  zoomed_out_thumb_storm.toml
crates/sb-app/: Cargo.toml
crates/sb-app/src/: bench.rs  commands.rs  ingest.rs  lib.rs  tuning.rs
crates/sb-media/: Cargo.toml
crates/sb-media/examples/: pacebench.rs
crates/sb-media/src/: lib.rs  maintenance.rs  probe.rs  seekable.rs
crates/sb-window/: Cargo.toml
crates/sb-window/src/: drag.rs  lib.rs  render.rs  schedule.rs  tiles.wgsl
docs/architecture/: README.md  grid.md  live-playback.md  media-pipeline.md  modals.md  render-loop.md  selection-and-actions.md
docs/perf-reviews/: 01-live-video-pipeline.md  02-efficiency-review.md  03-slow-disk-scheduler.md  04-network-storage-scheduler.md  05-zoom-storm-scheduler.md  README.md
spikes/seek-bench/: Cargo.toml
spikes/seek-bench/src/: main.rs
src/: main.rs
