[package]
name = "sb-media"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
log = { workspace = true }
# In-process libav for the seekable quickview decoder (PLAN.md §15
# "Low-latency seek", settled 2026-07). Links the system ffmpeg via
# pkg-config — building sb-media now needs the ffmpeg 8.x dev headers
# (brew ffmpeg provides them alongside the CLI we already require).
rsmpeg = { version = "0.18", default-features = false, features = ["link_system_ffmpeg", "ffmpeg8"] }
