[package]
name = "sb-window"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "30"
pollster = "1"
bytemuck = { version = "1", features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }

# Dock icon + drag-out sessions for the bare (unbundled) binary — same
# versions winit already pulls in transitively, so this adds no new
# compilation units, only generated bindings.
[target.'cfg(target_os = "macos")'.dependencies]
# "exception": AppKit throws NSExceptions (e.g. a drag session refused
# its seed event); uncaught they abort the process from inside the event
# callback. objc2::exception::catch turns them into loggable Results.
objc2 = { version = "0.5", features = ["exception"] }
objc2-foundation = { version = "0.2", features = [
    "NSData",
    "NSString",
    "NSURL",
    "NSArray",
    "NSGeometry",
] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSImage",
    "NSResponder",
    "NSDragging",
    "NSDraggingItem",
    "NSDraggingSession",
    "NSPasteboard",
    "NSPasteboardItem",
    "NSEvent",
    "NSView",
    "NSWindow",
    "NSWorkspace",
] }
